--- a/csp-apps/tc/tc/lib/csp/templates/contacts/team/edit.html
+++ b/csp-apps/tc/tc/lib/csp/templates/contacts/team/edit.html
@@ -30,8 +30,8 @@
                     <div class="panel-body">
                         {% field_value incoming 'created' %}
                         {% field_value incoming 'csp_id' %}
-                        {% field_value incoming 'target_circle_id' %}
-                        {% field_value incoming 'target_team_id' %}
+                        {% field_uuid_value incoming 'target_circle_id' %}
+                        {% field_uuid_value incoming 'target_team_id' %}
                     </div>
                 </div>
             </div>
