--- a/csp-apps/tc/tc/lib/csp/templates/user/search.html
+++ b/csp-apps/tc/tc/lib/csp/templates/user/search.html
@@ -18,13 +18,13 @@
                             </div>
                             <div class="col-xs-9 text-right">
                                 <div class="huge" style="font-size:40px">{{ teams|length }}</div>
-                                <div>Central Teams</div>
+                                <div>CSP Teams</div>
                             </div>
                         </div>
                     </div>
                     <a href="{% url 'team_list' %}">
                         <div class="panel-footer">
-                            <span class="pull-left">View all Central Teams</span>
+                            <span class="pull-left">View all CSP Teams</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </div>
@@ -108,7 +108,7 @@
     <div class="row">
         <div class="col-md-12">
             <h2>
-                <i class="fa fa-user-circle "></i> Central Teams
+                <i class="fa fa-user-circle "></i> CSP Teams
             </h2>
         </div>
     </div>
