--- a/deployment/scripts/configuration-templates/templates/csp-sites.conf.j2
+++ b/deployment/scripts/configuration-templates/templates/csp-sites.conf.j2
@@ -19,6 +19,7 @@
           SSLCertificateKeyFile {{ internalSSLCertificateKeyFile }}
           {% if service.mutual_ssl.internal == true-%}
           SSLVerifyClient require
+          SSLCARevocationCheck none
           SSLVerifyDepth 1
           {% if internalSSLCACertificateFile is defined %}
           SSLCACertificateFile {{ internalSSLCACertificateFile }}
