fix bad escaping of buttons and add further esacping

--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/list.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/list.html
@@ -47,7 +47,7 @@
                     <th data-field="startPriority" data-sortable="true" data-align="center" data-escape="true">Start Priority</th>
                     <th data-field="isDefault" data-sortable="true" data-align="center" data-escape="true">Default</th>
                     <th data-field="versionsCount" data-sortable="true" data-align="center" data-escape="true">Versions Count</th>
-                    <th data-field="btn" data-sortable="false" data-align="center" data-escape="true">Actions</th>
+                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
             </table>
