--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/list.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/list.html
@@ -50,7 +50,7 @@
                     <th data-field="internalIps" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">Internal IPs</th>
                     <th data-field="externalIps" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">External IPs</th>
                     <th data-field="contacts" data-sortable="true" data-visible="false" class="col-xs-1" data-escape="true">Contacts</th>
-                    <th data-field="btn" data-sortable="false" data-align="center" data-escape="true">Actions</th>
+                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
             </table>
