--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/dashboard.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/dashboard.html
@@ -46,7 +46,7 @@
                     <th data-field="lastManaged" data-sortable="true" data-visible="false" class="col-xs-1" data-escape="true">Last Managed</th>
                     <th data-field="confUpdates" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">Configured Updates</th>
                     <th data-field="reportUpdates" data-sortable="false" data-visible="false" class="col-xs-1" data-escape="true">Reported Updates</th>
-                    <th data-field="btn" data-sortable="false" data-align="center" data-escape="true">Actions</th>
+                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
 
