--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module-version/list.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module-version/list.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="page-header"><i class="fa fa-bars"></i> Module Versions of Module: <span th:utext="${moduleData.getName()}"></span></h2>
+            <h2 class="page-header"><i class="fa fa-bars"></i> Module Versions of Module: <span th:text="${moduleData.getName()}"></span></h2>
         </div>
     </div>
 
@@ -43,11 +43,11 @@
                 <thead>
                 <tr>
                     <th data-field="icon" data-align="center"></th>
-                    <th data-field="fullName" data-sortable="true">Full Name</th>
-                    <th data-field="version" data-sortable="true" data-align="center">Version</th>
-                    <th data-field="releasedOn" data-sortable="true" data-align="center">Released On</th>
-                    <th data-field="hash" data-sortable="true" data-visible="false">Hash</th>
-                    <th data-field="description" data-sortable="true" data-visible="false">Description</th>
+                    <th data-field="fullName" data-sortable="true" data-escape="true">Full Name</th>
+                    <th data-field="version" data-sortable="true" data-align="center" data-escape="true">Version</th>
+                    <th data-field="releasedOn" data-sortable="true" data-align="center" data-escape="true">Released On</th>
+                    <th data-field="hash" data-sortable="true" data-visible="false" data-escape="true">Hash</th>
+                    <th data-field="description" data-sortable="true" data-visible="false" data-escape="true">Description</th>
                     <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
